src/components/Futa/Comments/Comments.module.css
@keyframes shimmer {
    0% {
      background-position: 100% 0;
    }
    100% {
      background-position: -100% 0;
    }
  }

  .comments_outer.small{
    position: relative;
    width: 90%;
    margin: 0 auto;
  }
  

  .mainContainer{
    transition: all .2s ease-in-out;
    height: calc(100svh - 170px);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
    overflow: hidden;
  }
  
  .mainContainer.small{
    max-height: calc(47svh);
  }

  .mainContainer.small .commentsWrapper{
    max-height: calc(98% - 40px);
    bottom: 3rem;
  }

  .container {
    width: 100%;
    padding: 20px; 
  }
  
  .shimmer {
    width: 100%;
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(
      90deg,
      rgba(7, 7, 7, 0.1) 25%,
      rgba(52, 45, 45, 0.2) 50%,
      rgba(55, 53, 53, 0.1) 75%
    );
    background-size: 200% 100%;
    animation: shimmer 1.5s infinite;
    margin-bottom: 10px;
  }
  

  .commentsWrapper{
    display: block;
    width: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    max-height: calc(94svh - 170px);
    position: absolute;
    bottom: 4rem;
    }
    
  .comments_content{
    }


    .connection_status{
      position: absolute;
      top: 2rem;
      right: 45%;
    }

    @keyframes kf_dot_pulse {
      from{
        transform: scale(1);
        opacity: .7;
        }
        to{
          
          opacity: 0;
          transform: scale(4);
      }
    }

    @keyframes kf_loading_dot {
      0%, 100%{
        /* margin-top: 0rem; */
        opacity: 0;
        transform: scale(1);
        }
        50%{
          /* margin-top: -.2rem; */
          opacity: .7;
          transform: scale(1.25);
      }
    }


    @keyframes kf_scroll_btn_anim {
      from{
        right: -3rem;
        }
        to{
          right: 1.7rem
      }
    }

    .connection_dot{
      display: block;
      width: .4rem;
      height: .4rem;
      border-radius: 100vw;
      background-color: var(--positive);
      margin-right: 1rem;
    }
    .connection_dot_anim{
      display: block;
      width: .4rem;
      height: .4rem;
      border-radius: 100vw;
      background-color: var(--positive);
      animation: kf_dot_pulse 1s ease-in-out 3;
      position: absolute;
      opacity: .7;
      top: 0;
    }

    .loading_dots_wrapper{

      margin-top: -.5rem;
    }


    .floating_scroll_btn{
      transition: all .2s ease-in-out;
      position: absolute;
      padding: .3rem;
      right: -3rem;
      width: 2rem;
      height: 2rem;
      border: 2px solid rgba(255,255,255, .3);
      background: rgba(0,0,0, .3);
      backdrop-filter: blur(5px);
      animation: kf_scroll_btn_anim .2s ease-in-out forwards;
    }

    .floating_scroll_btn:hover{
      border-color: var(--accent1);
    }

    .show_previous_comments_btn{
      top: .5rem;
    }

    .scroll_to_bottom_btn{
      top: auto;
      bottom: 4rem;
    }

    .loading_dot{
      display: inline-block;
      width: .3rem;
      height: .3rem;
      border-radius: 100vw;
      background: var(--text2);
      margin: 0 .3rem;
      animation: kf_loading_dot 1s ease-in-out infinite;
      opacity: 0;
    }

    .loading_dot:nth-child(2){
      animation-delay: 300ms;
      }
      .loading_dot:nth-child(3){
        animation-delay: 600ms;
    }

    .debug_btn{
      position: absolute;
      top: 0;
      right: 50%;
      padding: 1rem;
      background: var(--accent1);
      color: var(--text1);
      border-radius: .3rem;
      cursor: pointer;
    }

    .no_comments_wrapper{
      bottom: 50%;
    }

    .no_comment_section{
      display: block;
      text-align: center;
      opacity: .4;
    }

    .all_fetched{
      margin-top: 4svh;
    width: 100%;
    text-align: center;
    opacity: 0.3;
    }

    .unread_messages_info{
      position: absolute;
      bottom: 3rem;
      left: 50%;
      transform: translateX(-50%);
      right: 0;
      padding: .3rem;
      color: var(--text1);
      background: rgba(255,255,255, .1);
      text-align: center;
      border-radius: .3rem;
      cursor: pointer;
      backdrop-filter: blur(5px);
      border: 1px solid rgba(255,255,255, .1);
    }

    
    
  .comments_outer.small .connection_status{
    right: 0rem;
    top: 1rem;
  }
  
  .comments_outer.small .comments_header{
    position: absolute;
    left: 0rem;
    top: .5rem;
    font-size: 1.2rem;
  }

    @media only screen and (max-width: 600px){

      
    .all_fetched{
      margin-top: calc(6svh + 2rem); 
    }

  .mainContainer{
    height: calc(100svh - 240px);
  }

  
  .commentsWrapper{
    max-height: 60svh;
  }

    }

